--- a/SASS/index.html
+++ b/SASS/index.html
@@ -90,12 +90,22 @@
       <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
       <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
    </table>
-
+<div class="buttons">
   <button class="button-success">Cool</button>
   <button class="button-error">error</button>
   <button class="button-info">info</button>
   <button class="button-warning">warning</button>
   <button class="button-def">default</button>
-
+  <button class="button-success">Cool</button>
+  <button class="button-error">error</button>
+  <button class="button-info">info</button>
+  <button class="button-warning">warning</button>
+  <button class="button-def">default</button>
+  <button class="button-success">Cool</button>
+  <button class="button-error">error</button>
+  <button class="button-info">info</button>
+  <button class="button-warning">warning</button>
+  <button class="button-def">default</button>
+</div>
 </body>
 </html>
